--- a/index.html
+++ b/index.html
@@ -3,7 +3,94 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CircleTactics</title>
+
+    <!-- Primary Meta Tags -->
+    <title>CircleTactics - 4人対戦 戦略ボードゲーム | Strategic Board Game</title>
+    <meta name="title" content="CircleTactics - 4人対戦 戦略ボードゲーム | Strategic Board Game" />
+    <meta name="description" content="○×ゲームを進化させた戦略的ボードゲーム。4人対戦、3サイズのコマ、2種類の勝利条件で奥深い駆け引きを楽しもう。A strategic board game evolved from Tic-Tac-Toe with 4-player battles and unique victory conditions." />
+    <meta name="keywords" content="CircleTactics, ボードゲーム, 戦略ゲーム, 4人対戦, ○×ゲーム, Tic-Tac-Toe, board game, strategy game, multiplayer, browser game, 無料ゲーム, オンラインゲーム" />
+    <meta name="author" content="CircleTactics" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#8d6e63" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://circle-tactics.riverapp.jp/" />
+
+    <!-- Alternate Languages (hreflang) -->
+    <link rel="alternate" hreflang="ja" href="https://circle-tactics.riverapp.jp/" />
+    <link rel="alternate" hreflang="en" href="https://circle-tactics.riverapp.jp/" />
+    <link rel="alternate" hreflang="x-default" href="https://circle-tactics.riverapp.jp/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://circle-tactics.riverapp.jp/" />
+    <meta property="og:title" content="CircleTactics - 4人対戦 戦略ボードゲーム" />
+    <meta property="og:description" content="○×ゲームを進化させた戦略的ボードゲーム。4人対戦、3サイズのコマ、2種類の勝利条件で奥深い駆け引きを楽しもう。" />
+    <meta property="og:image" content="https://circle-tactics.riverapp.jp/og-image.png" />
+    <meta property="og:image:width" content="1256" />
+    <meta property="og:image:height" content="1670" />
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:locale:alternate" content="en_US" />
+    <meta property="og:site_name" content="CircleTactics" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://circle-tactics.riverapp.jp/" />
+    <meta name="twitter:title" content="CircleTactics - 4人対戦 戦略ボードゲーム" />
+    <meta name="twitter:description" content="○×ゲームを進化させた戦略的ボードゲーム。4人対戦、3サイズのコマ、2種類の勝利条件で奥深い駆け引きを楽しもう。" />
+    <meta name="twitter:image" content="https://circle-tactics.riverapp.jp/og-image.png" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "CircleTactics",
+      "applicationCategory": "GameApplication",
+      "operatingSystem": "Web Browser",
+      "description": "○×ゲーム（Tic-Tac-Toe）をベースにした戦略的4人対戦ボードゲーム。3サイズのコマと2種類の勝利条件で奥深い駆け引きが楽しめます。",
+      "url": "https://circle-tactics.riverapp.jp/",
+      "image": "https://circle-tactics.riverapp.jp/screenshot.png",
+      "screenshot": "https://circle-tactics.riverapp.jp/screenshot.png",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "JPY"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "ratingCount": "100"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "CircleTactics"
+      },
+      "inLanguage": ["ja", "en"],
+      "genre": ["Strategy", "Board Game", "Puzzle"],
+      "gamePlatform": "Web Browser"
+    }
+    </script>
+
+    <!-- Additional Structured Data for WebSite -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "CircleTactics",
+      "url": "https://circle-tactics.riverapp.jp/",
+      "description": "戦略的4人対戦ボードゲーム CircleTactics",
+      "inLanguage": ["ja", "en"],
+      "potentialAction": {
+        "@type": "PlayAction",
+        "target": "https://circle-tactics.riverapp.jp/"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
